# sagiri

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: database.rs  error.rs  handler.rs  kitsu.rs  main.rs  sagiri.rs  telegram.rs  utils.rs
src/adapter/: mod.rs
src/adapter/matrix/: mod.rs  types.rs
src/adapter/telegram/: mod.rs  types.rs
src/bot/: telegram.rs
src/command/: mod.rs
src/matrix/: adapter.rs  bot.rs  mod.rs
src/telegram/: adapter.rs  bot.rs  mod.rs  types.rs
src/types/: kitsu.rs  mod.rs  telegram.rs
src/webhook/: webhook.rs
