[package]
name = "sagiri"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
license = "MIT"
repository = "https://github.com/PoiScript/sagiri"

[dependencies]
nom = "3.2"
url = "1.5"
log = "0.3"
serde = "1.0"
hyper = "0.11"
futures = "0.1"
hyper-tls = "0.1"
serde_json = "1.0"
tokio-core = "0.1"
env_logger = "0.4"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
